--- a/ev02/index.html
+++ b/ev02/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@900&display=swap">   
+    <title>ev02</title>
   </head>
   <body>
-    <div id="app"></div>
+
+    <div id="container"></div>
+    
+    <script src="input.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
+
