--- a/ev02/index.html
+++ b/ev02/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
 
+    <div id="blurb">
+      <h1>ABOUT</h1>
+      This is a dynamically built chart designed to track the progress (and keep track) of demos
+      that I write. It's both a visual tool for my own purposes and an exercise in coding.
+    </div>
+
     <div id="container"></div>
     
     <script src="input.js"></script>
