--- a/ev02/index.html
+++ b/ev02/index.html
@@ -11,6 +11,10 @@
 
     <div id="container"></div>
 
+    <div id="about">
+      <h1>?</h1>
+    </div>
+
     <div id="blurb">
       <h1>ABOUT</h1>
       This is a dynamically built chart designed to track the progress (and keep track) of demos
