--- a/ev02/index.html
+++ b/ev02/index.html
@@ -15,7 +15,7 @@
       <h1>?</h1>
     </div>
 
-    <div id="blurb">
+    <div id="blurb" class="invisible">
       <h1>ABOUT</h1>
       This is a dynamically built chart designed to track the progress (and keep track) of demos
       that I write. It's both a visual tool for my own purposes and an exercise in coding.
